--- a/style.css
+++ b/style.css
@@ -1,150 +1,152 @@
 @import "buttons.css";
 
-
 body {
-    background-image: url("images/background1.jpg");
-    background-attachment: fixed;
-    background-size: cover;
+  background-image: url("images/background1.jpg");
+  background-attachment: fixed;
+  background-size: cover;
 
-    font-style: Devanagari;
-    
-    
+  font-style: Devanagari;
+  text-align: justify;
 }
 
-header{
-    display: flex;
-    grid-template-columns: auto auto auto;
-    position: relative;
+header {
+  display: flex;
+  grid-template-columns: auto auto auto;
+  position: relative;
 }
 
-header img{
-    border-style: solid;
-    border-color: transparent;
-    width: auto;
-    height: 110px;
-    margin-left: 15px;
+header img {
+  border-style: solid;
+  border-color: transparent;
+  width: auto;
+  height: 110px;
+  margin-left: 15px;
 }
-
-
-
 
 .tab {
-     margin-left: 2.5em;
+  margin-left: 2.5em;
 }
-    
+
 a {
-    color: #FFFFFF;
-    text-decoration: none;
-    font-size: large;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: large;
 }
 
-nav{
-    position: absolute;
-    border-style: solid;
-    border-color: transparent;
-    top: 20px;
-    left: 200px;
+nav {
+  position: absolute;
+  border-style: solid;
+  border-color: transparent;
+  top: 20px;
+  left: 200px;
+}
+
+socials {
+  position: absolute;
+  border-style: solid;
+  border-color: transparent;
+  float: right;
+  top: 10px;
+  right: 0;
+}
+
+main {
+  display: flex;
+  grid-template-columns: auto auto auto;
+  border-style: solid;
+  border-color: transparent;
+  position: relative;
+  padding-top: 50px;
+}
+
+.word-art {
+  font-size: xx-large;
+  color: #ffffff;
+  border-style: solid;
+  border-color: transparent;
+  margin-left: 30px;
+  padding-bottom: 10px;
+}
+
+.tagline {
+  position: absolute;
+  color: lightgreen;
+  font-size: medium;
+  margin-left: 33px;
+  bottom: 0;
+}
+
+.img1 {
+  max-width: 50%;
+  height: 70px;
+  left: 42%;
+  top: 180px;
+  border-style: solid;
+  border-color: transparent;
+}
+
+.border1 {
+  max-width: 100%;
+  height: 100%;
+}
+
+.main1 {
+  position: relative;
+  display: grid;
+  grid-template-columns: auto 600px;
+}
+
+.info1 {
+  background-color: rgba(74, 138, 90, 0.76);
+  color: white;
+
+  padding-top: 30px;
+  padding-left: 50px;
+  padding-right: 30px;
+}
+
+.info1a {
+  position: relative;
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 50px;
+  color: white;
+
+  padding-top: 30px;
+  padding-left: 50px;
+  padding-right: 30px;
+}
+
+.info1a img{
+  width: 600px;
+  height: auto;
+
+  margin-right: -30px;
+}
+
+.main2 {
+  position: relative;
+  display: grid;
+}
+
+.main2 .info1 h1{
+  padding-left: 33%;
+}
+
+.main2 .gallery{
+
+  margin-left: 30px;
 }
 
 
-socials{
-    position: absolute;
-    border-style: solid;
-    border-color: transparent;
-    float: right;
-    top: 10px;
-    right: 0;
+.main2 .gallery img{
+  position: relative;
+  display: inline-block;
+  grid-template-columns: auto auto auto;
+  gap: 10px;
+  background-color: #c2b0a9;
+  padding: 10px;
+  width: 400px;
+  height: 250px;
 }
-
-main{
-    display: flex;
-    grid-template-columns: auto auto auto;
-    border-style: solid;
-    border-color: transparent;
-    position: relative;
-    padding-top: 50px;
-}
-
-.word-art{
-    font-size: xx-large;
-    color: #FFFFFF;
-    border-style: solid;
-    border-color: transparent;
-    margin-left: 30px;
-    padding-bottom: 10px;
-}
-
-
-.tagline{
-    position: absolute;
-    color: lightgreen;
-    font-size: medium;
-    margin-left: 33px;
-    bottom: 0;
-}
-
-
-.img1{
-    max-width:50%;
-    height: 70px;
-    left: 42%;
-    top: 180px;
-    border-style: solid;
-    border-color: transparent;
-}
-
-.border1{
-    max-width:100%;
-    height: 100%;
-}
-
-
-.grid-container {
-    position: relative;
-    display: grid;
-    grid-template-columns: 30px 200px auto 100px;
-    gap: 10px;
-    background-color: #2196F3;
-    padding: 10px;
-}
-
-.grid-container > div {
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid black;
-    text-align: center;
-    font-size: 30px;
-}
-
-
-.main1{
-    position: relative;
-    display: grid;
-    grid-template-columns: auto 600px;
-}
-
-.info1{
-    background-color: rgba(74, 138, 90, 0.76);
-    color: white;
-
-    padding-top: 30px;
-    padding-left: 50px;
-    padding-right: 30px;
-}
-
-.info1a{
-    position: relative;
-    display: grid;
-    grid-template-columns: 50%;
-    color: white;
-
-    padding-top: 30px;
-    padding-left: 50px;
-    padding-right: 30px;
-}
-
-.main2{
-    position: relative;
-    display: grid;
-}
-
 
