--- a/collectionStyle.scss
+++ b/collectionStyle.scss
@@ -1,6 +1,7 @@
 html{
     font-size: 100%;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 *, *::before, *::after{
@@ -8,7 +9,7 @@ html{
 }
 
 body {
-  background-color: #e3f2f3;
+  background-color: #d3ebec;
 
   font-style: Devanagari;
 
@@ -17,21 +18,55 @@ body {
 }
 
 header{
-    display: grid;
-    grid-template-columns: auto auto;
+    display: inline-flex;
     background-color: rgba(219, 12, 12, 0.801);
     padding-top: 20px;
+    width: 100%;
 }
 
 header > h1{
     color: #ffffff;
+    width: auto;
+    margin-left: 22%;
+    font-size: 46px;
 }
 
 header > .logo{
-    border: #ffffff solid;
-    background-color: #ffffff;
+    margin-top: 15px;
     width: 150px;
-    height: 70px;
+    height: 87px;
+}
+header > .logo > img{
+    width: 150px;
+    height: 87px;
+}
+
+nav{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+nav > ul > a{
+    margin-right: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    text-decoration: none;
+    color: #ffffff;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #1e3ab8;
+}
+
+nav > ul > .dropdown > a{
+    margin-right: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    text-decoration: none;
+    color: #ffffff;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #1e3ab8;
 }
 
 main{
@@ -40,16 +75,21 @@ main{
 }
 
 .sidebar-left{
-    border: #ffffff solid;
-
+    margin-left: 10px;
 }
 
 .sidebar-left > form{
     padding-left: 20px;
 }
 
+.sidebar-left > a{
+    padding-left: 20px;
+    text-decoration: none;
+}
+
 .gallery2{
     border: #ffffff solid;
+    margin-right: 70px;
 }
 
 .gallery2 ul{
@@ -69,6 +109,7 @@ main{
     font-size: 20px;
     text-align: center;
     color: #363636;
+    border: rgb(98, 0, 255) solid 1px;
 
 }
 
@@ -105,4 +146,62 @@ footer > .footer-links > .footer-payment > .gallery-pay > img{
     width: 60px;
     height: 20px;
 }
+
+
+#btnTop {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 30px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: red; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 10px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 16px; /* Increase font size */
+  }
+  
+  #btnTop:hover {
+    background-color: rgb(124, 0, 0); /* Add a dark-grey background on hover */
+  }
+
+
+  /* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+
+
+  /* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    padding-top: 10px;
+    background-color: #1e3ab8a1;
+    min-width: 94px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  /* Links inside the dropdown */
+.dropdown-content a {
+    color: #ffffff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: rgba(0, 0, 0, 0.219);}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #3e8e41;}
 
